force-app/main/default/objects/Membership__c/fields/Airline__c.field-meta.xml
<CustomField>
    <fullName>Airline__c</fullName>
    <description>The airline that issued this membership</description>
    <label>Airline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>