force-app/main/default/objects/Membership__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>The date when the Tier of Royal Orchid Plus expired</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>