force-app/main/default/objects/Membership__c/fields/EXTMember__c.field-meta.xml
<CustomField>
    <fullName>EXTMember__c</fullName>
    <description>The External Id of this membership which is Airline__c + '_' + Name</description>
    <externalId>true</externalId>
    <label>EXT Member</label>
    <length>50</length>
    <type>Text</type>
</CustomField>