force-app/main/default/objects/Membership__c/fields/Favorite_Food__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Food__c</fullName>
    <description>Food preference of the customer</description>
    <label>Favorite Food</label>
    <length>255</length>
    <type>Text</type>
</CustomField>