force-app/main/default/objects/Membership__c/fields/isExpired__c.field-meta.xml
<CustomField>
    <fullName>isExpired__c</fullName>
    <description>The incicator when the Tier of this membership is expired for Royal Orchid Plus (Currently not used but must be kept anywhere 26/05/17)</description>
    <formula>Expiry_Date__c &lt;  TODAY()</formula>
    <label>Expired</label>
    <type>Checkbox</type>
</CustomField>