force-app/main/default/objects/Membership__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Language preference of the customer</description>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>