force-app/main/default/objects/Membership__c/fields/MembershipId__c.field-meta.xml
<CustomField>
    <fullName>MembershipId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>In case of duplication, this field will related to the actual membership</description>
    <label>Merge with memership no.</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipLabel>Memberships</relationshipLabel>
    <relationshipName>Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>