force-app/main/default/objects/Membership__c/fields/Mileages__c.field-meta.xml
<CustomField>
    <fullName>Mileages__c</fullName>
    <description>The overall mileages of this membership</description>
    <label>Mileages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>