force-app/main/default/objects/Membership__c/fields/Mileages_Current_Quater__c.field-meta.xml
<CustomField>
    <fullName>Mileages_Current_Quater__c</fullName>
    <description>The expiring mileages of the upcoming quater</description>
    <label>Mileages Current Quater</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>