force-app/main/default/objects/Membership__c/fields/Mileages_Current_Quater_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Mileages_Current_Quater_Expiry_Date__c</fullName>
    <description>The expiry date of the upcoming quater</description>
    <label>Mileages Current Quater Expiry Date</label>
    <type>Date</type>
</CustomField>