force-app/main/default/objects/Membership__c/fields/Mileages_Q_2__c.field-meta.xml
<CustomField>
    <fullName>Mileages_Q_2__c</fullName>
    <description>The expiring mileages of the second quater of the year</description>
    <label>Mileages Q+2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>