force-app/main/default/objects/Membership__c/fields/Mileages_Q_3_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Mileages_Q_3_Expiry_Date__c</fullName>
    <description>The expiry date of the third quater of the year</description>
    <label>Mileages Q+3 Expiry Date</label>
    <type>Date</type>
</CustomField>