force-app/main/default/objects/Membership__c/fields/Mileages_Recent_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Mileages_Recent_Transaction__c</fullName>
    <description>Not used anywhere</description>
    <label>Mileages Recent Transaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>