force-app/main/default/objects/Membership__c/fields/Seat_Preference__c.field-meta.xml
<CustomField>
    <fullName>Seat_Preference__c</fullName>
    <description>Seat preference of the customer</description>
    <label>Seat Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>