force-app/main/default/objects/Membership__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <description>The tier of the membership (for Royal Orchid Plus, the tier will be translated to user-friendly term such as GOLD, PLAT or BASE)</description>
    <label>Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>