force-app/main/default/objects/Membership__c/fields/Tier_WS__c.field-meta.xml
<CustomField>
    <fullName>Tier_WS__c</fullName>
    <description>The tier of the membership according to the raw data from web service</description>
    <label>Tier WS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>